# AI_DevOps

./: .codespellrc  .env.example  .env.local.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AI_AGENT_START_INSTRUCTIONS.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  Jenkinsfile  QUICK_REFERENCE.md  README.md  SECRETS_MANAGEMENT.md  SECRETS_QUICK_REFERENCE.md  azure-pipelines.yml  demo_checks.py  docker-compose.secrets.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_demo_checks.sh  test_azure_devops.py
.github/workflows/: ci-cd.yml  dependency-review.yml  release.yml  security.yml
ai_devops_assistant/: __init__.py  cli.py  main.py
ai_devops_assistant/agents/: agent.py  memory.py  prompt_manager.py  prompts.py  tool_agent.py
ai_devops_assistant/api/: dependencies.py  middleware.py  schemas.py
ai_devops_assistant/api/routes/: analyze_logs.py  chat.py  health.py  metrics.py  run_sql.py
ai_devops_assistant/benchmarking/: __init__.py  model_benchmark.py
ai_devops_assistant/config/: logging.py  settings.py
ai_devops_assistant/database/: models.py  queries.py  session.py
ai_devops_assistant/evaluation/: __init__.py  benchmark.py  llm_evaluator.py
ai_devops_assistant/ml/: __init__.py  finetuning.py
ai_devops_assistant/observability/: __init__.py  ai_observability.py  monitoring.py
ai_devops_assistant/rag/: document_ingestion.py  embeddings.py  pipeline.py  retriever.py  scraper.py  vector_store.py
ai_devops_assistant/services/: __init__.py  llm_service.py  model_registry.py  multi_llm.py
ai_devops_assistant/tools/: base.py  kubernetes_tool.py  log_tool.py  metrics_tool.py  pipeline_tool.py  sql_tool.py  tool_executor.py
ai_devops_copilot/: __init__.py  main.py
ai_devops_copilot/agents/: __init__.py  agent.py  prompts.py
ai_devops_copilot/api/: dependencies.py  schemas.py
ai_devops_copilot/api/routes/: analyze_logs.py  chat.py  health.py  metrics.py  run_sql.py
ai_devops_copilot/config/: constants.py  logging.py  settings.py
ai_devops_copilot/database/: __init__.py  models.py  queries.py  session.py
ai_devops_copilot/monitoring/: __init__.py
ai_devops_copilot/rag/: __init__.py  document_ingestion.py  embeddings.py  retriever.py  vector_store.py
ai_devops_copilot/services/: llm_service.py
ai_devops_copilot/tools/: __init__.py  kubernetes_tool.py  log_tool.py  metrics_tool.py  pipeline_tool.py  sql_tool.py  tool_executor.py
infra/kubernetes/: README.md  chroma.yaml  configmap.yaml  deployment.yaml  external-secrets-config.yaml  grafana.yaml  namespace.yaml  ollama.yaml  postgres.yaml  prometheus.yaml  secret.yaml  setup-secrets.sh
infra/kubernetes/helm/: Chart.yaml  README.md  deploy.sh  values-production.yaml  values.yaml
infra/kubernetes/helm/charts/: ollama-0.1.2.tgz
infra/kubernetes/helm/templates/: _helpers.tpl  chroma-pvc.yaml  configmap.yaml  deployment.yaml  external-secret.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
monitoring/grafana/dashboards/: ai-devops-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
prompts/: README.md
prompts/agents/: tool_orchestrator_v1.0.md
prompts/rag/: retrieval_context_v1.0.md
prompts/system/: devops_assistant.md
tests/: conftest.py
tests/integration/: test_api_integration.py
tests/unit/: test_agent.py  test_api.py  test_tools.py
